Cody Repos/animal-shelter-for-rosa-cf/rosa/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-shelter-for-rosa-cf-deployment
  namespace: cse-cody-ferguson
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animal-shelter-for-rosa-cf-app
  template:
    metadata:
      labels:
        app: animal-shelter-for-rosa-cf-app
    spec:
      containers:
      - name: animal-shelter-for-rosa-cf-container
        image: registry.gitlab.galvanize.com/cohorts/ent/sf/cse-rosa/cse-rosa-2025-02-24/student-work/cody-ferguson/animal-shelter-for-rosa-cf:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
