Cody Repos/animal-shelter-for-rosa-cf/rosa/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: animal-shelter-for-rosa-cf-instance
  name: animal-shelter-for-rosa-cf-route
  namespace: cse-cody-ferguson
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: animal-shelter-for-rosa-cf-service
    weight: 100
  wildcardPolicy: None
